Cambios en las vistas de Distrito Japones, Cambiar el formato de Modena.png a Modena.webp

--- a/src/templates/Distrito Japones Descargar.html
+++ b/src/templates/Distrito Japones Descargar.html
@@ -196,7 +196,7 @@
 
                             <!-- Moneda + cantidad -->
                             <span class="inline-flex items-center text-sm">
-                                <img src="/src/img/Moneda.png" alt="Moneda" class=" h-7 ">
+                                <img src="/src/img/Moneda.webp" alt="Moneda" class=" h-7 ">
                                 10
                             </span>
                         </div>
@@ -331,7 +331,7 @@
 
                             <!-- Moneda + cantidad -->
                             <span class="inline-flex items-center text-sm">
-                                <img src="/src/img/Moneda.png" alt="Moneda" class=" h-7 ">
+                                <img src="/src/img/Moneda.webp" alt="Moneda" class=" h-7 ">
                                 15
                             </span>
                         </div>
