--- a/src/templates/Distrito Japones Moneda.html
+++ b/src/templates/Distrito Japones Moneda.html
@@ -47,7 +47,7 @@
             <!-- Cuadro de Moneda Flotante -->
             <div class="flex flex-col items-center mb-6">
                 <div class="vidrio-estatico w-full p-4 flex flex-col items-center">
-                    <img src="/src/img/Moneda.png" alt="Moneda" class="h-32 flotar mb-4">
+                    <img src="/src/img/Moneda.webp" alt="Moneda" class="h-32 flotar mb-4">
                     <h2 class="text-2xl font-bold">Tienda de Monedas</h2>
                 </div>
             </div>
@@ -60,7 +60,7 @@
                     <!-- Oferta 1 -->
                     <div class="vidrio-estatico p-2 flex justify-between items-center">
                         <div class="flex items-center">
-                            <img src="/src/img/Moneda.png" alt="Moneda" class="h-8 mr-2">
+                            <img src="/src/img/Moneda.webp" alt="Moneda" class="h-8 mr-2">
                             <span class="text-lg">20 Monedas - $5</span>
                         </div>
                         <button
@@ -84,7 +84,7 @@
                     <!-- Oferta 2 -->
                     <div class="vidrio-estatico p-2 flex justify-between items-center">
                         <div class="flex items-center">
-                            <img src="/src/img/Moneda.png" alt="Moneda" class="h-8 mr-2">
+                            <img src="/src/img/Moneda.webp" alt="Moneda" class="h-8 mr-2">
                             <span class="text-lg">50 Monedas - $20</span>
                         </div>
                         <button
@@ -108,7 +108,7 @@
                     <!-- Oferta 3 -->
                     <div class="vidrio-estatico p-2 flex justify-between items-center">
                         <div class="flex items-center">
-                            <img src="/src/img/Moneda.png" alt="Moneda" class="h-8 mr-2">
+                            <img src="/src/img/Moneda.webp" alt="Moneda" class="h-8 mr-2">
                             <span class="text-lg">150 Monedas - $30</span>
                         </div>
                         <button
@@ -132,7 +132,7 @@
                     <!-- Oferta 4 -->
                     <div class="vidrio-estatico p-2 flex justify-between items-center">
                         <div class="flex items-center">
-                            <img src="/src/img/Moneda.png" alt="Moneda" class="h-8 mr-2">
+                            <img src="/src/img/Moneda.webp" alt="Moneda" class="h-8 mr-2">
                             <span class="text-lg">500 Monedas - $80</span>
                         </div>
                         <button
@@ -222,7 +222,7 @@
                     <!-- Cuadro de ícono Flotante -->
                     <div class="flex flex-col items-center mb-6">
                         <div class="vidrio-estatico w-full p-4 flex flex-col items-center">
-                            <img src="/src/img/Foto de mano con herrramienta.png" alt="maintenance" alt="ícono" class="h-32 flotar">
+                            <img src="/src/img/Foto de mano con herrramienta.webp" alt="maintenance" alt="ícono" class="h-32 flotar">
                         </div>
                     </div>
 
