Cambio de Rutas de img para mejor visualización Ya definitivo

--- a/src/templates/Distrito Japones Inicio.html
+++ b/src/templates/Distrito Japones Inicio.html
@@ -557,7 +557,7 @@
             <!-- Coins -->
             <div class="flex items-center space-x-0.5 sm:space-x-1 flex-shrink-0">
                 <div class="w-5 h-5 sm:w-6 sm:h-6 rounded-full overflow-hidden flex items-center justify-center">
-                    <img src="/src/img/Moneda.webp" alt="Moneda" class="h-6 w-6 object-cover" />
+                    <img src="../../src/img/Moneda.webp" alt="Moneda" class="h-6 w-6 object-cover" />
                 </div>
                 <span class="text-white font-medium text-xs sm:text-sm">100</span>
                 <a href="Distrito Japones Moneda.html"
